--- a/style.css
+++ b/style.css
@@ -1,29 +1,26 @@
 body {
-	margin: 0;
-	padding: 0;
-	font-size: 18px;
-	color: var(--tg-theme-text-color);
-	background: var(--tg-theme-bg-color);
+    margin: 0;
+    padding: 0;
+    font-size: 18px;
+    color: var(--tg-theme-text-color);
+    background: var(--tg-theme-bg-color);
 }
 
 .container {
-	max-width: 390px;
+    max-width: 390px;
 }
 
 .inner {
-	display: grid;
-	grid-template-columns: 1fr 1fr;
-	grid-template-rows: 200px 200px 200px;
-}
-
-.img {
-	width: 130px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 200px 200px 200px;
 }
 
 .item {
-	text-align: center;
+    text-align: center;
 }
 
+/* 
 .btn {
 	display: inline-block;
 	padding: 10px 20px;
@@ -35,14 +32,14 @@ body {
 	font-weight: 700;
 
 	transition: background .2s linear;
-}
+} */
 
-.btn:hover {
-	background: lightgreen;
-}
+/* .btn:hover {
+    background: lightgreen;
+} */
 
-.usercard {
-	text-align: center;
+#cards {
+    text-align: center;
 }
 
 /*
