--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body {
+/* body {
     margin: 0;
     padding: 0;
     font-size: 18px;
@@ -18,7 +18,7 @@ body {
 
 .item {
     text-align: center;
-}
+} */
 
 /* 
 .btn {
@@ -38,9 +38,11 @@ body {
     background: lightgreen;
 } */
 
-#cards {
+/* #cards {
+    display: flex;
+    flex-direction: column;
     text-align: center;
-}
+} */
 
 /*
 var(--tg-theme-bg-color)
@@ -50,3 +52,22 @@ var(--tg-theme-link-color)
 var(--tg-theme-button-color)
 var(--tg-theme-button-text-color)
 */
+
+#cards {
+    display: flex;
+    flex-wrap: wrap;
+    width: 350px;
+}
+
+.item {
+    flex-basis: 50%;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 10px;
+    align-items: center;
+    text-align: center;
+}
+
+.item .emoji {
+    font-size: 60px;
+}
